<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/viewGithub"
            android:visible="false"
            android:title="@string/viewGithub">
        </item>
        <item
            android:visible="false"

            android:id="@+id/actionToggleValues"
            android:title="@string/actionToggleValues">
        </item>
        <item
            android:visible="false"
            android:id="@+id/actionToggleIcons"
            android:title="@string/actionToggleIcons">
        </item>
        <item
            android:visible="false"
            android:id="@+id/actionToggleHighlight"
            android:title="@string/actionToggleHighlight">
        </item>
        <item
            android:visible="false"
            android:id="@+id/actionToggleMakeShadowSameColorAsCandle"
            android:title="@string/actionToggleCandleShadow">
        </item>
        <item
            android:visible="false"
            android:id="@+id/actionTogglePinch"
            android:title="@string/actionTogglePinch">
        </item>
        <item
            android:visible="false"
            android:id="@+id/actionToggleAutoScaleMinMax"
            android:title="@string/actionToggleAutoScale">
        </item>
        <item
            android:id="@+id/animateX"
            android:title="@string/animateX">
        </item>
        <item
            android:id="@+id/animateY"
            android:title="@string/animateY">
        </item>
        <item
            android:id="@+id/animateXY"
            android:title="@string/animateXY">
        </item>
        <item
            android:visible="false"
            android:id="@+id/actionSave"
            android:title="@string/actionSave">
        </item>



</menu>